--- a/TenderInfo/Views/UserInfo/Index.cshtml
+++ b/TenderInfo/Views/UserInfo/Index.cshtml
@@ -26,8 +26,8 @@
                                     <div class="row">
                                         <div class="col-md-5">
                                             <div class="form-group">
-                                                <label for="tbxUserNum">员工编号</label>
-                                                <input type="text" class="form-control" id="tbxUserNum" placeholder="员工编号">
+                                                <label for="tbxUserNum">AD账号</label>
+                                                <input type="text" class="form-control" id="tbxUserNum" placeholder="AD账号">
                                             </div>
                                             <div class="form-group">
                                                 <label for="tbxUserName">姓名</label>
@@ -281,7 +281,7 @@
             },
             {
                 field: 'UserNum',
-                title: '员工编号'
+                title: 'AD账号'
             },
             {
                 field: 'UserName',
