--- a/TenderInfo/Views/Home/Login.cshtml
+++ b/TenderInfo/Views/Home/Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>招标管理系统</title>
+    <title>招标管理平台</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <!--[if lt IE 9]>
         <script src="/Scripts/html5shiv.js"></script>
