--- a/TenderInfo/Views/NoticeInfo/Index.cshtml
+++ b/TenderInfo/Views/NoticeInfo/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    ViewBag.Title = "通知公告管理";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="modal fade" id="myModal">
@@ -14,7 +15,6 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-horizontal">
-
                                     <div class="form-group">
                                         <label for="tbxTitle">公告标题(*)</label>
                                         <input type="text" class="form-control" name="tbxTitle" id="tbxTitle" placeholder="公告标题">
@@ -50,51 +50,12 @@
     <div class="box-body">
         <div class="row">
             <div class="col-md-12">
-                <button id="btnAdd" class="btn btn-info"><i class="glyphicon glyphicon-plus"></i> 新增公告</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <table class="table table-striped table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>公告标题</th>
-                            <th>内容字数</th>
-                            <th>提交人</th>
-                            <th>提交时间</th>
-                            <th>编辑&删除</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tableList"></tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="form-inline">
-                    <div class="form-group">
-                        共<span id="totalPageCount"></span>页 |
-                        <span id="totalDataCount"></span>条数据
-                        每页<select id="ddlPageSize" style="height:34px;padding:0px" class="form-control">
-                            <option value="5">5</option>
-                            <option selected value="10">10</option>
-                            <option value="15">15</option>
-                            <option value="20">20</option>
-                        </select>项
-                    </div>
-                    <div class="form-group" style="height:34px;">
-                        <ul class="btn-group" id="example"></ul>
-                    </div>
-                    <div class="input-group col-md-2 col-lg-1">
-                        <input id="tbxCurPage" value="1" maxlength="7" size="2" class="form-control  search-query text-center" type="text" placeholder="">
-                        <span class="input-group-btn">
-                            <button id="goPage" class="btn btn-primary btn-sm" style="height:34px;" type="button">
-                                转到
-                            </button>
-                        </span>
-                    </div>
+                <div id="toolbar" class="btn-group">
+                    <button id="btnAdd" type="button" class="btn btn-info">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 新增
+                    </button>
                 </div>
+                <table id="bsTable"></table>
             </div>
         </div>
     </div>
@@ -139,7 +100,7 @@
                                         $("#myModal").modal("hide");
                                         toastr["success"]("修改公告成功", "提示");
                                         clearInfo();
-                                        getList($("#tbxCurPage").val(), $("#ddlPageSize").val());
+                                        $("#bsTable").bootstrapTable('refresh');
                                     }
                                     else {
                                         $("#myModal").modal("hide");
@@ -164,8 +125,7 @@
                                         $("#myModal").modal("hide");
                                         toastr["success"]("添加公告成功", "提示");
                                         clearInfo();
-                                        getList(1, $("#ddlPageSize").val());
-                                        $("#tbxCurPage").val("1");
+                                        $("#bsTable").bootstrapTable('refresh');
                                     }
                                     else {
                                         $("#myModal").modal("hide");
@@ -179,133 +139,122 @@
             });
         });
 
-        getList(1, $("#ddlPageSize").val());
-        function getList(curPage, pageSize) {
-            var args = { "curPage": curPage, "pageSize": pageSize };
-            $.post("/NoticeInfo/GetList", encodeURIComponent(JSON.stringify(args)), function (result) {
-                var userInfo = result["infoList"];//数据列表
-                var count = result["count"];//数据个数
-                var totalPageCount = 0;//总页数
-                if (count % pageSize != 0) {
-                    totalPageCount = count / pageSize + 1;
-                }
-                else {
-                    totalPageCount = count / pageSize;
-                }
-                if (curPage > totalPageCount) {
-                    totalPageCount = totalPageCount - 1;
-                    $("#tbxCurPage").val("1");
-                    getList(1, $("#ddlPageSize").val());
-                }
-                $("#totalPageCount").text(parseInt(totalPageCount));
-                $("#totalDataCount").text(count);
-
-                $("#tableList").html("");
-                $.each(userInfo, function (index, val) {
-                    var milliseconds = parseInt(val["InsertDate"].replace(/\D/igm, ""));
-                    var date = new Date(milliseconds);
-                    var temp = "<tr><td>" + val["NoticeID"] + "</td>";
-                    temp += "<td>" + val["NoticeTitle"] + "</td>";
-                    temp += "<td>" + val["ContentCount"] + "</td>";
-                    temp += "<td>" + val["UserName"] + "</td>";
-                    temp += "<td>" + date.toLocaleString() + "</td>";
-                    temp += "<td><a href='javascript:void(0)' class='btnEdit' data-uid='" + val["NoticeID"] + "'><i class='glyphicon glyphicon-pencil'></i></a>";
-                    temp += "&nbsp;&nbsp;&nbsp;&nbsp;<a href='javascript:void(0)' class='btnDel' data-uid='" + val["NoticeID"] + "'><i class='glyphicon glyphicon-remove'></i></a></td>";
-                    temp += "</tr>";
-                    $("#tableList").append(temp);
+        var operateEvents = {
+            'click .edit': function (e, value, row, index) {
+                $("label.error").hide();
+                $(".error").removeClass("error");
+                var id = row.NoticeID;
+                $('#myModal').modal('show');
+                $("#modalTitle").text("编辑公告信息");
+                $("#NoticeID").text(id);
+                var args = { "id": id };
+                $.post("/NoticeInfo/GetOne", encodeURIComponent(JSON.stringify(args)), function (result) {
+                    $("#tbxTitle").val(result["NoticeTitle"]);
+                    UE.getEditor("editor").setContent(result["Content"]);
                 });
-                var options = {
-                    numberOfPages: 6,
-                    bootstrapMajorVersion: 3,
-                    currentPage: curPage,
-                    totalPages: totalPageCount,
-                    useBootstrapTooltip: false,
-                    itemTexts: function (type, page, current) {
-                        switch (type) {
-                            case "first":
-                                return "首页";
-                            case "prev":
-                                return "上一页";
-                            case "next":
-                                return "下一页";
-                            case "last":
-                                return "尾页";
-                            case "page":
-                                return page;
-                        }
-                    },
-                    alignment: 'right',
-                    tooltipTitles: function (type, page, current) {
-                    },
-                    onPageClicked: function (event, originalEvent, type, page) {
-                        getList(page, pageSize);
-                        $("#tbxCurPage").val(page);
-                    }
-                }
-                $('#example').bootstrapPaginator(options);
-            });
-        }
-        $("#ddlPageSize").change(function () {
-            $("#tbxCurPage").val("1");
-            getList(1, $("#ddlPageSize").val());
-        });
-        $("#goPage").click(function () {
-            if ($("#tbxCurPage").val() == "") {
-                toastr["warning"]("页码不能为空", "提示");
-            }
-            else {
-                var r = /^[0-9]*[1-9][0-9]*$/
-                if (r.test($("#tbxCurPage").val())) {
-                    var goPageNum = parseInt($("#tbxCurPage").val());
-                    var totalPage = parseInt($("#totalPageCount").html());
-                    if (goPageNum > 1 && goPageNum < totalPage) {
-                        getList(goPageNum, $("#ddlPageSize").val());
-                        $("#tbxCurPage").val(goPageNum);
+            },
+            'click .remove': function (e, value, row, index) {
+                var id = $(this).attr("data-uid");
+                Ewin.confirm({ message: "确认要删除公告信息吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
                     }
                     else {
-                        toastr["warning"]("亲，页码超过范围！", "提示");
-                        $("#tbxCurPage").val("");
+                        var args = { "id": row.NoticeID };
+                        $.post("/NoticeInfo/Del", encodeURIComponent(JSON.stringify(args)), function (result) {
+                            if (result == "ok") {
+                                toastr["success"]("删除公告成功", "提示");
+                                $("#bsTable").bootstrapTable('refresh');
+                            }
+                            else {
+                                toastr["error"]("保存错误，请联系5613877！", "提示");
+                            }
+                        });
                     }
-                }
-                else {
-                    toastr["warning"]("亲，只能填写数字！", "提示");
-                    $("#tbxCurPage").val("");
-                }
+                });
             }
-        });
-
-        $(document).on("click", ".btnEdit", function () {
-            $("label.error").hide();
-            $(".error").removeClass("error");
-            var id = $(this).attr("data-uid");
-            $('#myModal').modal('show');
-            $("#modalTitle").text("编辑公告信息");
-            $("#NoticeID").text(id);
-            var args = { "id": id };
-            $.post("/NoticeInfo/GetOne", encodeURIComponent(JSON.stringify(args)), function (result) {
-                $("#tbxTitle").val(result["NoticeTitle"]);
-                UE.getEditor("editor").setContent(result["Content"]);
-            });
-        });
-        $(document).on("click", ".btnDel", function () {
-            var id = $(this).attr("data-uid");
-            Ewin.confirm({ message: "确认要删除公告信息吗？" }).on(function (e) {
-                if (!e) {
-                    return;
+        };
+        function operateFormatter(value, row, index) {
+            return [
+                '<a class="edit" href="javascript:void(0)" title="edit">',
+                '<i class="glyphicon glyphicon-pencil"></i>',
+                '</a>  ',
+                '<a class="remove" href="javascript:void(0)" title="Remove">',
+                '<i class="glyphicon glyphicon-trash"></i>',
+                '</a>'
+            ].join('&nbsp;&nbsp;');
+        }
+        var queryParams = function (params) {
+            var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+                limit: params.limit,   //页面大小
+                offset: params.offset //页码
+            };
+            return temp;
+        };
+        var columns = [
+            {
+                checkbox: true
+            },
+            {
+                field: 'NoticeID',
+                title: 'ID编号'
+            },
+            {
+                field: 'NoticeTitle',
+                title: '公告标题'
+            },
+            {
+                field: 'ContentCount',
+                title: '内容字数'
+            },
+            {
+                field: 'UserName',
+                title: '提交人'
+            },
+            {
+                field: 'InsertDate',
+                title: '提交时间',
+                formatter: function (value, row, index) {
+                    return getJsonDateTime(row.InsertDate);
                 }
-                else {
-                    var args = { "id": id };
-                    $.post("/NoticeInfo/Del", encodeURIComponent(JSON.stringify(args)), function (result) {
-                        if (result == "ok") {
-                            toastr["success"]("删除公告成功", "提示");
-                            getList($("#tbxCurPage").val(), $("#ddlPageSize").val());
-                        }
-                        else {
-                            toastr["error"]("保存错误，请联系5613877！", "提示");
-                        }
-                    });
-                }
-            });
+            },
+            {
+                field: 'operate',
+                title: '编辑&删除',
+                align: 'center',
+                events: operateEvents,
+                formatter: operateFormatter
+            }];
+        $('#bsTable').bootstrapTable({
+            url: '/NoticeInfo/GetList',         //请求后台的URL（*）
+            contentType: 'application/x-www-form-urlencoded',
+            method: 'post',                     //请求方式（*）
+            toolbar: '#toolbar',                //工具按钮用哪个容器
+            striped: true,                      //是否显示行间隔色
+            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+            pagination: true,                   //是否显示分页（*）
+            sortable: false,                     //是否启用排序
+            sortOrder: "asc",                   //排序方式
+            queryParams: queryParams,//传递参数（*）
+            sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
+            pageNumber: 1,                       //初始化加载第一页，默认第一页
+            pageSize: 10,                       //每页的记录行数（*）
+            pageList: [10, 15, 20, 25],        //可供选择的每页的行数（*）
+            search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+            strictSearch: true,
+            showColumns: true,                  //是否显示所有的列
+            showRefresh: true,                  //是否显示刷新按钮
+            minimumCountColumns: 2,             //最少允许的列数
+            clickToSelect: false,                //是否启用点击选中行
+            //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            uniqueId: "NoticeID",                     //每一行的唯一标识，一般为主键列
+            showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
+            cardView: false,                    //是否显示详细视图
+            detailView: false,                   //是否显示父子表
+            paginationPreText: "上一页",
+            paginationNextText: "下一页",
+            showExport: false,                     //是否显示导出
+            columns: columns
         });
     });
 </script>
