--- a/TenderInfo/Views/RoleInfo/Index.cshtml
+++ b/TenderInfo/Views/RoleInfo/Index.cshtml
@@ -18,9 +18,7 @@
             <div class="col-md-12">
                 <div class="form-inline">
                     <div class="form-group">
-                        <button id="btnAdd" class="btn btn-info"><i class="glyphicon glyphicon-plus"></i> 新增</button>
                         角色名称：<input id="tbxRoleNameSearch" class="form-control" type="text" />
-
                         <button id="btnSearch" class="btn btn-primary"><i class="glyphicon glyphicon-search"></i> 查询</button>
                     </div>
                 </div>
@@ -29,44 +27,12 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <table class="table table-striped table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>角色名称</th>
-                            <th>角色描述</th>
-                            <th>编辑&删除</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tableList"></tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="form-inline">
-                    <div class="form-group">
-                        共<span id="totalPageCount"></span>页 |
-                        <span id="totalDataCount"></span>条数据
-                        每页<select id="ddlPageSize" style="height:34px;padding:0px">
-                            <option value="5">5</option>
-                            <option selected value="10">10</option>
-                            <option value="15">15</option>
-                            <option value="20">20</option>
-                        </select>项
-                    </div>
-                    <div class="form-group" style="height:34px;">
-                        <ul class="form-control" id="example"></ul>
-                    </div>
-                    <div class="input-group col-md-2 col-lg-1">
-                        <input id="tbxCurPage" value="1" maxlength="7" size="2" class="form-control  search-query text-center" type="text" placeholder="">
-                        <span class="input-group-btn">
-                            <button id="goPage" class="btn btn-purple btn-sm" style="height:34px;" type="button">
-                                转到
-                            </button>
-                        </span>
-                    </div>
+                <div id="toolbar" class="btn-group">
+                    <button id="btnAdd" type="button" class="btn btn-info">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 新增
+                    </button>
                 </div>
+                <table id="bsTable"></table>
             </div>
         </div>
     </div>
@@ -74,126 +40,98 @@
 
 <script>
     $(function () {
-        function getUrlParam(name) {
-            var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)"); //构造一个含有目标参数的正则表达式对象
-            var r = window.location.search.substr(1).match(reg);  //匹配目标参数
-            if (r != null) return unescape(r[2]); return null; //返回参数值
+        var operateEvents = {
+            'click .edit': function (e, value, row, index) {
+                var id = $(this).attr("data-uid");
+                window.location.href = "/RoleInfo/RoleInfoAddOrEdit?id=" + row.RoleID;
+            },
+            'click .remove': function (e, value, row, index) {
+                Ewin.confirm({ message: "确认要删除【" + row.RoleName + "】吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
+                    }
+                    alert("删除" + row.RoleName);
+                });
+            }
         };
+        function operateFormatter(value, row, index) {
+            return [
+                '<a class="edit" href="javascript:void(0)" title="edit">',
+                '<i class="glyphicon glyphicon-pencil"></i>',
+                '</a>  ',
+                '<a class="remove" href="javascript:void(0)" title="Remove">',
+                '<i class="glyphicon glyphicon-trash"></i>',
+                '</a>'
+            ].join('&nbsp;&nbsp;');
+        }
+        var queryParams = function (params) {
+            var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+                limit: params.limit,   //页面大小
+                offset: params.offset,  //页码
+                roleNameSearch: $("#tbxRoleNameSearch").val()
+            };
+            return temp;
+        };
+        var columns = [
+            {
+                checkbox: true
+            },
+            {
+                field: 'RoleID',
+                title: 'ID编号'
+            },
+            {
+                field: 'RoleName',
+                title: '角色名称'
+            },
+            {
+                field: 'RoleDescribe',
+                title: '角色描述'
+            },
+            {
+                field: 'operate',
+                title: '编辑&删除',
+                align: 'center',
+                events: operateEvents,
+                formatter: operateFormatter
+            }];
+        $('#bsTable').bootstrapTable({
+            url: '/RoleInfo/GetList',         //请求后台的URL（*）
+            contentType: 'application/x-www-form-urlencoded',
+            method: 'post',                     //请求方式（*）
+            toolbar: '#toolbar',                //工具按钮用哪个容器
+            striped: true,                      //是否显示行间隔色
+            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+            pagination: true,                   //是否显示分页（*）
+            sortable: false,                     //是否启用排序
+            sortOrder: "asc",                   //排序方式
+            queryParams: queryParams,//传递参数（*）
+            sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
+            pageNumber: 1,                       //初始化加载第一页，默认第一页
+            pageSize: 10,                       //每页的记录行数（*）
+            pageList: [10, 15, 20, 25],        //可供选择的每页的行数（*）
+            search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+            strictSearch: true,
+            showColumns: true,                  //是否显示所有的列
+            showRefresh: true,                  //是否显示刷新按钮
+            minimumCountColumns: 2,             //最少允许的列数
+            clickToSelect: false,                //是否启用点击选中行
+            //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            uniqueId: "RoleID",                     //每一行的唯一标识，一般为主键列
+            showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
+            cardView: false,                    //是否显示详细视图
+            detailView: false,                   //是否显示父子表
+            paginationPreText: "上一页",
+            paginationNextText: "下一页",
+            showExport: false,                     //是否显示导出
+            columns: columns
+        });
+
         $("#btnAdd").click(function () {
             window.location.href = "/RoleInfo/RoleInfoAddOrEdit";
         });
-        var curPageUrl = getUrlParam("curPage");
-        var pageSizeUrl = getUrlParam("pageSize");
-        var searchUrl = getUrlParam("search");
-
-        if (searchUrl != null) {
-            $("#tbxRoleNameSearch").val(searchUrl);
-        }
-        if (curPageUrl != null) {
-            getList(curPageUrl, pageSizeUrl);
-            $("#ddlPageSize").val(pageSizeUrl);
-            $("#tbxCurPage").val(curPageUrl);
-        }
-        else {
-            getList(1, $("#ddlPageSize").val());
-        }
-        function getList(curPage, pageSize) {
-            var name = $("#tbxRoleNameSearch").val();
-
-            var args = { "curPage": curPage, "pageSize": pageSize, "name": name };
-            $.post("/RoleInfo/GetList", encodeURIComponent(JSON.stringify(args)), function (result) {
-                var userInfo = result["infoList"];//数据列表
-                var count = result["count"];//数据个数
-
-                var totalPageCount;//总页数
-                if (count % pageSize != 0) {
-                    totalPageCount = count / pageSize + 1;
-                }
-                else {
-                    totalPageCount = count / pageSize;
-                }
-
-                $("#totalPageCount").text(parseInt(totalPageCount));
-                $("#totalDataCount").text(count);
-
-                $("#tableList").html("");
-                $.each(userInfo, function (index, val) {
-                    var temp = "<tr><td>" + val["RoleID"] + "</td><td>" + val["RoleName"] + "</td>";
-                    temp += "<td>" + val["RoleDescribe"] + "</td>";
-                    temp += "<td><a href='javascript:void(0)' class='btnEdit' data-uid='" + val["RoleID"] + "'><i class='glyphicon glyphicon-pencil'></i></a>";
-                    temp += "&nbsp;&nbsp;&nbsp;&nbsp;<a href='javascript:void(0)' class='btnDel' data-uid='" + val["RoleID"] + "'><i class='glyphicon glyphicon-remove'></i></a></td>";
-                    temp += "</tr>";
-                    $("#tableList").append(temp);
-                });
-                var options = {
-                    numberOfPages: 6,
-                    bootstrapMajorVersion: 3,
-                    currentPage: curPage,
-                    totalPages: totalPageCount,
-                    useBootstrapTooltip: false,
-                    itemTexts: function (type, page, current) {
-                        switch (type) {
-                            case "first":
-                                return "首页";
-                            case "prev":
-                                return "上一页";
-                            case "next":
-                                return "下一页";
-                            case "last":
-                                return "尾页";
-                            case "page":
-                                return page;
-                        }
-                    },
-                    alignment: 'right',
-                    tooltipTitles: function (type, page, current) {
-                    },
-                    onPageClicked: function (event, originalEvent, type, page) {
-                        getList(page, pageSize);
-                        $("#tbxCurPage").val(page);
-                    }
-                }
-                $('#example').bootstrapPaginator(options);
-            });
-        }
-        $("#ddlPageSize").change(function () {
-            $("#tbxCurPage").val("1");
-            getList(1, $("#ddlPageSize").val());
-        });
-        $("#goPage").click(function () {
-            if ($("#tbxCurPage").val() == "") {
-                toastr["warning"]("页码不能为空", "提示");
-            }
-            else {
-                var r = /^[0-9]*[1-9][0-9]*$/
-                if (r.test($("#tbxCurPage").val())) {
-                    var goPageNum = parseInt($("#tbxCurPage").val());
-                    var totalPage = parseInt($("#totalPageCount").html());
-                    if (goPageNum > 1 && goPageNum < totalPage) {
-                        getList(goPageNum, $("#ddlPageSize").val());
-                        $("#tbxCurPage").val(goPageNum);
-                    }
-                    else {
-                        toastr["warning"]("亲，页码超过范围！", "提示");
-                        $("#tbxCurPage").val("");
-                    }
-                }
-                else {
-                    toastr["warning"]("亲，只能填写数字！", "提示");
-                    $("#tbxCurPage").val("");
-                }
-            }
-        });
-        $(document).on("click", ".btnEdit", function () {
-            //alert("编辑" + $(this).attr("data-uid"));
-            var id = $(this).attr("data-uid");
-            window.location.href = "/RoleInfo/RoleInfoAddOrEdit?id=" + id + "&curPage=" + $("#tbxCurPage").val() + "&pageSize=" + $("#ddlPageSize").val() + "&search=" + $("#tbxRoleNameSearch").val();
-        });
-        $(document).on("click", ".btnDel", function () {
-            alert("删除" + $(this).attr("data-uid"));
-        });
         $("#btnSearch").click(function () {
-            getList(1, $("#ddlPageSize").val());
+            $("#bsTable").bootstrapTable('refresh');
         });
     });
 </script>
