--- a/TenderInfo/Views/TechnicSpecifiction/SearchInfoComprehensive.cshtml
+++ b/TenderInfo/Views/TechnicSpecifiction/SearchInfoComprehensive.cshtml
@@ -5,8 +5,8 @@
     <div class="col-md-12">
         <div class="form-inline">
             <div class="form-group">
-                <label for="tbxFileNameSearch">文件名称：</label>
-                <input type="text" id="tbxFileNameSearch" class="form-control" placeholder="文件名称">
+                <label for="tbxProjectNameSearch">项目名称：</label>
+                <input type="text" id="tbxProjectNameSearch" class="form-control" placeholder="项目名称">
             </div>
             <div class="form-group">
                 <label for="ddlApproveDeptSearch">提交部门：</label>
